--- a/index.html
+++ b/index.html
@@ -24,15 +24,19 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
             <![endif]-->
 
+  <div class="splash">
+    <div class="logo-white"></div>
+  </div>
+
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="btn-menu" href="#">Menu</a>
-        <div class="page-title">Autumn</div>
+        <div class="page-title">Autumn / Winter 2015</div>
       </div>
       <ul class="main-nav">
         <li>
-          <a href="collections.html">
+          <a href="index.html">
             Collections
           </a>
         </li>
@@ -53,29 +57,36 @@
   <div class="main-container">
     <div class="main wrapper clearfix">
       <div class="col-3 left-col">
-        <h1 class="title">rokh</h1>
-        <ul>
+        <h1 class="site-title">rokh</h1>
+        <ul class="main-desktop-nav">
           <li>
-            <a>
+            <a href="index.html">
               Collections
             </a>
           </li>
+          <li class="sub">
+            <a class="active">
+              Autumn / Winter 2015
+            </a>
+          </li>
           <li>
-            <a>
+            <a href="about.html">
               About
             </a>
           </li>
           <li>
-            <a>
+            <a href="contact.html">
               Contact
             </a>
           </li>
         </ul>
+        <footer>
+          &copy; rokh
+        </footer>
       </div>
 
       <div class="col-3 center-col">
-        <div class="main-img"></div>
-        <img class="main-img" src="img/product/1.jpg"/>
+        <img class="main-img show" src="img/product/1.jpg"/>
         <img class="main-img" src="img/product/2.jpg"/>
         <img class="main-img" src="img/product/3.jpg"/>
         <img class="main-img" src="img/product/4.jpg"/>
@@ -113,7 +124,47 @@
       </div>
 
       <div class="col-3 right-col">
-        thumbs go here..
+        <div class="thumbs-nav">
+          <div class="thumbs-arrow-up"></div>
+          <div class="thumb-slider">
+            <div class="thumb-slider-inner">
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+            </div>
+          </div>
+          <div class="thumbs-arrow-down"></div>
+        </div>
+        <a class="footer-link" href="http://instagram.com" target="_blank">Instagram</a>
       </div>
 
     </div>
