--- a/about.html
+++ b/about.html
@@ -29,14 +29,14 @@
       <div class="navbar-header">
         <a class="btn-menu" href="#">Menu</a>
       </div>
-      <ul class="main-nav">
+      <ul class="main-nav nav">
         <li>
           <a href="index.html">
-            Collections
+            Collection
           </a>
         </li>
         <li>
-          <a href="about.html">
+          <a href="about.html" class="active">
             About
           </a>
         </li>
@@ -53,19 +53,14 @@
     <div class="main wrapper clearfix">
       <div class="col-3 left-col">
         <h1 class="site-title">rokh</h1>
-        <ul class="main-desktop-nav">
+        <ul class="main-desktop-nav nav">
           <li>
             <a href="index.html">
-              Collections
-            </a>
-          </li>
-          <li class="sub">
-            <a class="active">
-              Autumn / Winter 2015
+              Collection
             </a>
           </li>
           <li>
-            <a href="about.html">
+            <a href="about.html" class="active">
               About
             </a>
           </li>
@@ -80,7 +75,7 @@
         </footer>
       </div>
 
-      <div class="col-3 center-col">
+      <div id="main-content" class="col-3 center-col ">
         <div class="vert-centered">
           <h2 class="clearfix">About Us</h2>
           <p class="clearfix">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ultricies lobortis suscipit. Curabitur aliquam viverra nunc, ac sagittis magna placerat sed. Vivamus nisl justo, quat eget tortor vel, consectetur do nibh. Sed vehicula massa eu venenatis commodo. Aliquam rhoncus felis id sollicitudin laoreet. Vivamus nisl justo, quat eget tortor vel, sectetur do nibh. Sed vehicula massa eu venenatis commodo.</p>
