--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@
       <div class="navbar-header">
         <a class="btn-menu" href="#">Menu</a>
       </div>
-      <ul class="main-nav">
+      <ul class="main-nav nav">
         <li>
           <a href="index.html">
-            Collections
+            Collection
           </a>
         </li>
         <li>
@@ -41,7 +41,7 @@
           </a>
         </li>
         <li>
-          <a href="contact.html">
+          <a href="contact.html" class="active">
             Contact
           </a>
         </li>
@@ -53,15 +53,10 @@
     <div class="main wrapper clearfix">
       <div class="col-3 left-col">
         <h1 class="site-title">rokh</h1>
-        <ul class="main-desktop-nav">
+        <ul class="main-desktop-nav nav">
           <li>
             <a href="index.html">
-              Collections
-            </a>
-          </li>
-          <li class="sub">
-            <a class="active">
-              Autumn / Winter 2015
+              Collection
             </a>
           </li>
           <li>
@@ -70,7 +65,7 @@
             </a>
           </li>
           <li>
-            <a href="contact.html">
+            <a href="contact.html" class="active">
               Contact
             </a>
           </li>
@@ -80,7 +75,7 @@
         </footer>
       </div>
 
-      <div class="col-3 center-col">
+      <div id="main-content" class="col-3 center-col ">
         <div class="vert-centered contact-us">
           <h2>Contact Us</h2>
           <address>
