--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <a class="btn-menu" href="#">Menu</a>
         <div class="page-title">Autumn / Winter 2015</div>
       </div>
-      <ul class="main-nav">
+      <ul class="main-nav nav">
         <li>
-          <a href="index.html">
-            Collections
+          <a href="index.html" class="active">
+            Collection
           </a>
         </li>
         <li>
@@ -58,10 +58,10 @@
     <div class="main wrapper clearfix">
       <div class="col-3 left-col">
         <h1 class="site-title">rokh</h1>
-        <ul class="main-desktop-nav">
+        <ul class="main-desktop-nav nav">
           <li>
             <a href="index.html">
-              Collections
+              Collection
             </a>
           </li>
           <li class="sub">
@@ -85,7 +85,7 @@
         </footer>
       </div>
 
-      <div class="col-3 center-col">
+      <div id="main-content" class="col-3 center-col ">
         <img class="main-img show" src="img/product/1.jpg"/>
         <img class="main-img" src="img/product/2.jpg"/>
         <img class="main-img" src="img/product/3.jpg"/>
