--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
   <div class="main-container">
     <div class="main wrapper clearfix">
       <div class="col-3 left-col">
-        <h1 class="site-title">rokh</h1>
+        <a href="index.html" class="site-title"></a>
         <ul class="main-desktop-nav nav">
           <li>
             <a href="index.html">
@@ -83,7 +83,48 @@
         </div>
       </div>
 
+
       <div class="col-3 right-col">
+        <div class="thumbs-nav">
+          <div class="thumbs-arrow-up"></div>
+          <div class="thumb-slider">
+            <div class="thumb-slider-inner">
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+              <div class="thumb"></div>
+            </div>
+          </div>
+          <div class="thumbs-arrow-down"></div>
+        </div>
         <a class="footer-link" href="http://instagram.com" target="_blank">Instagram</a>
       </div>
 
