--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 
-<body>
+<body class="index-page">
   <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
             <![endif]-->
@@ -57,7 +57,7 @@
   <div class="main-container">
     <div class="main wrapper clearfix">
       <div class="col-3 left-col">
-        <h1 class="site-title">rokh</h1>
+        <a href="index.html" class="site-title"></a>
         <ul class="main-desktop-nav nav">
           <li>
             <a href="index.html">
