--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 
 
       <div class="col-3 right-col">
-        <div class="thumbs-nav">
+        <div class="thumbs-nav" style="display:none;">
           <div class="thumbs-arrow-up"></div>
           <div class="thumb-slider">
             <div class="thumb-slider-inner">
