update thumbs on left right

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="col-3 right-col">
         <div class="thumbs-nav">
           <div class="thumbs-arrow-up"></div>
-          <div class="thumb-slider">
+          <div class="thumb-slider" data-page="1">
             <div class="thumb-slider-inner">
               <div class="thumb"></div>
               <div class="thumb"></div>
