slide left nav up

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               Collection
             </a>
           </li>
-          <li class="sub">
+          <li class="sub closed">
             <a class="active">
               Autumn / Winter 2015
             </a>
